--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -3,14 +3,13 @@
 }
 
 .btn {
-    padding: 8px 20px;
-    border-radius: 4px;
+    /* padding: 1rem; */
+    border-radius: 30%;
     outline: none;
     border: none;
     cursor: pointer;
 }
 .btn:hover {
-    padding: 8px 20px;
     transition: all 0.3s ease-out;
     background: #fff;
     color: wheat;
@@ -25,7 +24,6 @@
 .btn-outline{
     background-color: transparent;
     color: #fff;
-    padding: 8px 20px;
     border-radius: 4px;
     border: 1px solid var(--primary);
     transition: all 0.3s ease-out;
@@ -33,14 +31,16 @@
 }
 
 .btn-medium{
-    padding: 8px 20px;
-    border-radius: 4px;
-    font-size: 18px;
+    width: 10rem;
+    /* padding: 10px; */
+    border-radius: 5px;
+    font-size: 1.2rem;
     color: #fff;
+    box-sizing: border-box;
 }
 .btn-large{
-    padding: 12px 25px;
-    border-radius: 4px;
-    font-size: 20px;
+    width: 5rem;
+    border-radius: 5px;
+    font-size: 1.2rem;
     color: #fff;
 }
