--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,18 +1,25 @@
 .NavbarItem{
     background: greenyellow;
-    height: 80px;
     display: flex;
+    height: 56px;
     justify-content: center;
     justify-items: center;
     font-size: 1.2rem;
+    padding: 1rem;
 }
 .navbar-logo{
+    display: flex;
+    margin: 0;
+    padding: 0;
     color: #fff;
-    justify-self: 20px;
-    margin-left: 20px;
+    align-items: center;
+    /* margin: 1rem; */
     cursor: pointer;
 }
-
+.navbar-logo h1{
+    margin: 0;
+    padding: 0;
+}
 .fa-react {
     margin-left: 0.5rem;
     font-size: 1.6rem;
@@ -26,12 +33,13 @@
     text-align: center;
     width: 70vw;
     justify-content: end;
-    margin-right: 2rem;
+    align-items: center;
+    /* margin: 1rem; */
 }
 .nav-links{
     color: white;
     text-decoration: none;
-    padding: 0.5rem 1rem;
+    
 }
 .nav-links:hover{
     background-color: blue;
@@ -60,9 +68,9 @@
         width: 100%;
         height: 500px;
         position: absolute;
-        top:80px;
+        top:56px;
         left: -100%;
-        opacity: 1;
+        opacity: 2;
         transition: all 0.5 ease;
     }
     .nav-menu.active{
@@ -95,7 +103,7 @@
         position: absolute;
         top: 0;
         right: 0;
-        transform: translate(-100%,60%);
+        transform: translate(-100%,10%);
         font-size: 1.8rem;
         cursor: pointer;
     }
@@ -103,17 +111,19 @@
         color: #fff;
         font-size: 2rem;
     }
-    /* .nav-links-mobile{
+    .nav-links-mobile{
         display: block;
         text-align: center;
-        padding: 1.5rem;
-        margin: 2rem auto;
-        border-radius: 4px;
-        width: 80%;
+        width: 15rem;
         background: chocolate;
         text-decoration: none;
         color: #fff;
-        font-size: 1.5rem;
-    } */
+        font-size: 1.5rem; 
+        border-radius: 10px;
+        margin-bottom: 1rem;
+    }
+    .btn{
+        display: none;
+    }
     
 }
